# todomcp

./: .gitignore  README.md  pyproject.toml
docs/: PROJECT_GUIDE.md
src/mcp_todo/: __init__.py  client.py  repository.py  server.py
tests/: test_mcp_server.py  test_repository.py  test_server_cli.py
