[project]
name = "mcp-todo-demo"
version = "0.1.0"
description = "A small SQLite todo project demonstrating the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28,<2",
]

[project.scripts]
mcp-todo-server = "mcp_todo.server:main"
mcp-todo-http = "mcp_todo.server:http_main"
mcp-todo-client = "mcp_todo.client:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_todo"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
